<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c6deff"
    android:orientation="vertical"
    android:weightSum="5">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:background="#fff"
        android:fontFamily="@font/aclonica"
        android:padding="20dp"
        android:text="@string/settings_instructions"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#151b54"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="5">

        <TextView
            android:id="@+id/select"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="#fff"
            android:fontFamily="@font/aclonica"
            android:paddingTop="50dp"
            android:text="@string/select"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#151b54"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/select_description"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="3"
            android:background="#fff"
            android:fontFamily="@font/aclonica"
            android:paddingTop="30dp"
            android:text="@string/select_description"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#151b54"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/select_button"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:fontFamily="@font/aclonica"
            android:padding="40dp"
            android:background="@drawable/settings_icon"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="5">

        <TextView
            android:id="@+id/next_screen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="#fff"
            android:fontFamily="@font/aclonica"
            android:paddingTop="40dp"
            android:text="@string/next_screen"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#151b54"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/nextscreen_description"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="3"
            android:background="#fff"
            android:fontFamily="@font/aclonica"
            android:paddingTop="25dp"
            android:text="@string/nextscreen_description"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#151b54"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/nextscreen_button"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:fontFamily="@font/aclonica"
            android:padding="40dp"
            android:background="@drawable/settings_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="5">

        <TextView
            android:id="@+id/previous_screen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="#fff"
            android:fontFamily="@font/aclonica"
            android:paddingTop="40dp"
            android:text="@string/previous_screen"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#151b54"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/previousscreen_description"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="3"
            android:background="#fff"
            android:fontFamily="@font/aclonica"
            android:paddingTop="25dp"
            android:text="@string/previousscreen_description"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#151b54"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/previousscreen_button"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:fontFamily="@font/aclonica"
            android:padding="40dp"
            android:background="@drawable/settings_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="5">

        <TextView
            android:id="@+id/record"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="#fff"
            android:fontFamily="@font/aclonica"
            android:paddingTop="40dp"
            android:text="@string/record"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#151b54"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/record_description"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="3"
            android:background="#fff"
            android:fontFamily="@font/aclonica"
            android:paddingTop="35dp"
            android:text="@string/record_description"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#151b54"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/record_button"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:fontFamily="@font/aclonica"
            android:padding="40dp"
            android:background="@drawable/settings_icon" />
    </LinearLayout>
</LinearLayout>